7services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod
  labels:
    app: nginx-prod
spec:
  ports:
  - port: 80
    targetPort: 80
    name: nginx-prod
  selector:
    app: nginx-prod

---

apiVersion: v1
kind: Service
metadata:
  name: nginxstate
spec:
  selector:
    app: nginx # has to match .spec.template.metadata.labels
    tier: nginxstate
  ports:
    - protocol: TCP
      port: 80 #serviceport
      targetPort: 80 #podport
