8ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxstate
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/kemal"
        backend:
          service:
            name: nginxstate
            port:
              number: 80
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/gokhan"
        backend:
          service:
            name: nginxstate
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/devops"
        backend:
          service:
            name: nginx-prod
            port:
              number: 80
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/yolu"
        backend:
          service:
            name: nginx-prod
            port:
              number: 80
